add latlng clean

--- a/Lisa Code/LisaCleanDisaster.ipynb
+++ b/Lisa Code/LisaCleanDisaster.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,38 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load csv data in dataframe\n",
-    "pull_LatLng = \"../Data/Country LatLng.csv\"\n",
+    "pull_GDP = \"../Data/GDP by Country 2016.csv\"\n",
+    "pull_MedAge = \"../Data/Median Age 2016.csv\"\n",
+    "pull_PPP = \"../Data/PPP by Country 2016.csv\"\n",
+    "pull_PopDen = \"../Data/Population Density by Country 2016.csv\"\n",
+    "pull_PopTot = \"../Data/Population Total by Country 2016.csv\"\n",
+    "#pull_GDP = \"../Data/GDP by Country 2016.csv\"\n",
     "\n",
-    "LatLng_data = pd.read_csv(pull_LatLng)\n",
-    "CoordinatesClean = LatLng_data.dropna()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Country      244\n",
-       "Latitude     244\n",
-       "Longitude    244\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "CoordinatesClean.count()"
+    "GDP_data = pd.read_csv(pull_GDP)\n",
+    "MedAge_data = pd.read_csv(pull_MedAge, encoding= \"utf-8\")\n",
+    "PPP_data = pd.read_csv(pull_PPP)\n",
+    "PopDen_data = pd.read_csv(pull_PopDen)\n",
+    "PopTot_data = pd.read_csv(pull_PopTot)\n"
    ]
   },
   {
@@ -68,7 +53,16 @@
    ],
    "source": [
     "#Look at counts for each variable\n",
-    "\n",
+    "GDP_data = GDP_data.rename(columns = {\"Country Name\": \"Country\"})\n",
+    "GDPClean = GDP_data[[\"Country\",\"GDP (current US$)\"]]\n",
+    "MedianAgeClean = MedAge_data[[\"Country\",\"Median Age\"]]\n",
+    "PPP_data = PPP_data.rename(columns = {\"Country Name\": \"Country\",\"GDP, PPP (current international $)\": \"PPP\" })\n",
+    "PPPClean = PPP_data[[\"Country\",\"PPP\"]]\n",
+    "PopDen_data = PopDen_data.rename(columns= {\"Country Name\": \"Country\",\n",
+    "                                           \"Population density (people per sq. km of land area)\": \"Population Density\" })\n",
+    "PopulationDensityClean = PopDen_data[[\"Country\",\"Population Density\"]]\n",
+    "PopTot_data = PopTot_data.rename(columns= {\"Country Name\": \"Country\", \"Population, total\": \"Population Total\" })\n",
+    "PopulationTotalClean = PopTot_data[[\"Country\",\"Population Total\"]]\n",
     "PopulationDensityClean.count()"
    ]
   },
@@ -79,7 +73,8 @@
    "outputs": [],
    "source": [
     "#export clean data\n",
-    "\n",
+    "output_data_file = \"../Clean Data/GDPClean.csv\"\n",
+    "GDPClean.to_csv(output_data_file, index=False)\n",
     "output_data_file = \"../Clean Data/PPPClean.csv\"\n",
     "PPPClean.to_csv(output_data_file, index=False)\n",
     "output_data_file = \"../Clean Data/MedianAgeClean.csv\"\n",
