--- a/Xuan Code/Untitled.ipynb
+++ b/Xuan Code/Untitled.ipynb
@@ -2,15 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import %matplotlib inline\n",
+    "%matplotlib inline\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import "
+    "import scipy.stats as stats"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
