Lisa initial data anlysis

--- a/Lisa Code/LisaCleanDemographic.ipynb
+++ b/Lisa Code/LisaCleanDemographic.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,9 @@
     "pull_LatLng = \"../Data/Country LatLng.csv\"\n",
     "\n",
     "LatLng_data = pd.read_csv(pull_LatLng)\n",
-    "CoordinatesClean = LatLng_data.dropna()\n"
+    "CoordinatesClean = LatLng_data.dropna()\n",
+    "output_data_file = \"../Clean Data/CoordinatesClean.csv\"\n",
+    "CoordinatesClean.to_csv(output_data_file, index=False)"
    ]
   },
   {
@@ -79,7 +81,8 @@
    "outputs": [],
    "source": [
     "#export clean data\n",
-    "\n",
+    "output_data_file = \"../Clean Data/GDPClean.csv\"\n",
+    "GDPClean.to_csv(output_data_file, index=False)\n",
     "output_data_file = \"../Clean Data/PPPClean.csv\"\n",
     "PPPClean.to_csv(output_data_file, index=False)\n",
     "output_data_file = \"../Clean Data/MedianAgeClean.csv\"\n",
