update presentation outline

--- a/Xuan Code/Analysecorrelation.ipynb
+++ b/Xuan Code/Analysecorrelation.ipynb
@@ -18,7 +18,6 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from scipy import stats\n",
     "from scipy.stats import linregress\n",
     "import seaborn as sns"
    ]
@@ -176,7 +175,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
