Education and Alcohol consumption figures

--- a/Monica Code/MonicaMainCode.ipynb
+++ b/Monica Code/MonicaMainCode.ipynb
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +815,8 @@
     "happy_Alc_2016_df2.plot.scatter(x=\"Alc_Consumption LPC\", y=\"Happiness Index_2016\")\n",
     "plt.plot(happy_Alc_2016_df2[\"Alc_Consumption LPC\"], fit, 'r--')\n",
     "plt.title(\"Alcohol Consumption and Happiness\", fontsize=15)\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.savefig(\"../ChartsTables/Alch_vs_Happines.png\")"
    ]
   },
   {
@@ -837,13 +838,6 @@
    "source": [
     "r_value"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1309,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1333,12 +1327,13 @@
     "happy_Edu_2016df2.plot.scatter(x=\"Education Index 2016\", y=\"Happiness Index 2016\")\n",
     "plt.plot(happy_Edu_2016df2[\"Education Index 2016\"], fit, 'r--')\n",
     "plt.title(\"Happiness and Education\", fontsize=15)\n",
-    "plt.grid()"
+    "plt.grid()\n",
+    "plt.savefig(\"../ChartsTables/Education_vs_Happines.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
@@ -1349,7 +1344,7 @@
        "0.760359545305715"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
