--- a/Presentation/DataAnalysisGDP.ipynb
+++ b/Presentation/DataAnalysisGDP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 102,
    "metadata": {
     "scrolled": true
    },
@@ -139,7 +139,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 103,
    "metadata": {
     "scrolled": true
    },
@@ -183,7 +183,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,16 +319,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2b9ae309080>"
+       "<seaborn.axisgrid.PairGrid at 0x2b9b6fa85f8>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -352,16 +352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x2b9a2edc588>"
+       "<seaborn.axisgrid.PairGrid at 0x2b9ae7147f0>"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 110,
    "metadata": {
     "scrolled": true
    },
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 113,
    "metadata": {
     "scrolled": true
    },
